# fastapi_petproject

./: .env  .gitignore  README.md  main.py  pyproject.toml
migrations/versions/: 51e3ed2f83ec_rename_column_dislike_to_dislikes.py  577fdc595189_init.py  7418a424f51b_init.py
src/: schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: posts.py  users.py
src/routes/: auth.py  posts.py  users.py
src/services/: random_avatars.py
templates/: base.html  form_post.html  index.html  login.html  signup.html
