[tool.poetry]
name = "pet-project-fastapi"
version = "0.1.0"
description = ""
authors = ["Sanyavas <vasilinaoleksandr@gmail.com>"]
readme = "README.md"
packages = [{include = "pet_project_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
requests = "^2.31.0"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
jinja2 = "^3.1.2"
alembic = "^1.12.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
